--- a/twitter-spring-security/src/main/resources/application.properties
+++ b/twitter-spring-security/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=twitter-spring-security
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/twitter-spring-security
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
